# sisyphus-server

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py
app/helpers/: mongo.py
app/models/: data.py  queue.py  status.py  workers.py
app/routes/: data.py  queue.py  status.py  workers.py
docker/: Dockerfile  docker-compose.yml
