[tool.poetry]
name = "sisyphus-server"
version = "1.3.1"
description = ""
authors = ["JamesTheBard <jamesthebard@gmail.com>"]
# readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-restx = "^1.1.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
pycouchdb = "^1.14.2"
python-box = "^7.1.1"
humanize = "^4.8.0"
pymongo = "^4.5.0"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
tzdata = "^2023.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
